<resources>
    <string name="app_name">pwsi</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Zgłoś zdarzenie</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="kategoria">Kategoria</string>
    <string name="opiszdarzenia">Opis zdarzenia</string>
    <string name="lokalizacja">Lokalizacja</string>
    <string name="dodajzdjecia">Dodaj zdjęcia</string>
    <string name="wyslij">Wyślij</string>
    <string name="nazwa">Nazwa</string>
</resources>